src/objects/Article_Project_Request__c.object
<CustomObject>
    <description>This custom object has been created to capture new Article/Project requests and track approval of the request.</description>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create New</fullName>
                </value>
                <value>
                    <fullName>Update Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Project_Request__c</fullName>
        <label>Article/Project Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Article Update</fullName>
                </value>
                <value>
                    <fullName>Email Update</fullName>
                </value>
                <value>
                    <fullName>Multi Article Change</fullName>
                </value>
                <value>
                    <fullName>New Article</fullName>
                </value>
                <value>
                    <fullName>New Email</fullName>
                </value>
                <value>
                    <fullName>New Source Doc</fullName>
                </value>
                <value>
                    <fullName>New Training</fullName>
                </value>
                <value>
                    <fullName>Project Release</fullName>
                </value>
                <value>
                    <fullName>Project Test</fullName>
                </value>
                <value>
                    <fullName>Source Doc Update</fullName>
                </value>
                <value>
                    <fullName>Training Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Service_Notes__c</fullName>
        <description>Notes from Client Services</description>
        <label>Client Service Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_SME_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact/SME/PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By_If_Applicable__c</fullName>
        <label>Date Needed By (If Applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Article</fullName>
                </value>
                <value>
                    <fullName>Email Temp</fullName>
                </value>
                <value>
                    <fullName>LZ Article</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Article</fullName>
                </value>
                <value>
                    <fullName>Public Article</fullName>
                </value>
                <value>
                    <fullName>Source Doc</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goals_Objective__c</fullName>
        <label>Goals/Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <description>Cumulative number of hours worked: i.	Example: I work 2 hrs on project Monday, On Monday I enter 2.  I then work 2 more hours on Tuesday, on Tuesday replace 2 w/ 4.</description>
        <label>Hours Worked</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplementerID__c</fullName>
        <formula>IF( Project_Implementer__r.Id  = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImplementerID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Attorney Services</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Intellectual Property Services</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Personal Services</fullName>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Open_Requests_Approver__c</fullName>
        <formula>if( Project_Request_Approver__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Requests - Approver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Open_Requests_Implementor__c</fullName>
        <formula>if( Project_Implementer__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Open Requests - Implementor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Submitted_Requests__c</fullName>
        <formula>if( Project_Request_Submitter__c =$User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Submitted Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(LLC) Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>(LLP) Limited Liability Partnership</fullName>
                </value>
                <value>
                    <fullName>(LP) Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>501(c)3 Preparation</fullName>
                </value>
                <value>
                    <fullName>All Products</fullName>
                </value>
                <value>
                    <fullName>Amendment Annual Reports</fullName>
                </value>
                <value>
                    <fullName>Attorney-Prepared Provisional Application for Patent</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Advantage Pro Plan</fullName>
                </value>
                <value>
                    <fullName>Certificate of Good Standing</fullName>
                </value>
                <value>
                    <fullName>Certified Copies</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Compliance Calendar</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>Corporate Minutes</fullName>
                </value>
                <value>
                    <fullName>DBA (Doing Business As)</fullName>
                </value>
                <value>
                    <fullName>Design Patent</fullName>
                </value>
                <value>
                    <fullName>Dissolution</fullName>
                </value>
                <value>
                    <fullName>Divorce</fullName>
                </value>
                <value>
                    <fullName>EIN Obtainment/Federal Tax ID</fullName>
                </value>
                <value>
                    <fullName>Entity Name Availability Check</fullName>
                </value>
                <value>
                    <fullName>Foreign Qualification</fullName>
                </value>
                <value>
                    <fullName>General Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>Initial Reports</fullName>
                </value>
                <value>
                    <fullName>Joint Venture Agreement</fullName>
                </value>
                <value>
                    <fullName>Last Will &amp; Testament</fullName>
                </value>
                <value>
                    <fullName>Legal Advantage Plus Plan</fullName>
                </value>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who will be responsible for implementing the project/article request</description>
        <inlineHelpText>Who is responsible for implementing this approved project/article request?</inlineHelpText>
        <label>Project Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Project_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Request_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Request Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Request_Submitter__c</fullName>
        <label>Project Request Submitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Request__c</fullName>
        <label>Project Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Article (Customer-Facing)</fullName>
                </value>
                <value>
                    <fullName>Article (Internal)</fullName>
                </value>
                <value>
                    <fullName>Article Update</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Request (Document Revision)</fullName>
                </value>
                <value>
                    <fullName>Customer Request (Legal Research)</fullName>
                </value>
                <value>
                    <fullName>Customer Request (LZ Signature as RA)</fullName>
                </value>
                <value>
                    <fullName>Customer Request (Release Documents for Deceased)</fullName>
                </value>
                <value>
                    <fullName>Customer Request (Urgent Legal Action)</fullName>
                </value>
                <value>
                    <fullName>Document (Final Packet Instructions)</fullName>
                </value>
                <value>
                    <fullName>Document (Legal Form or Template)</fullName>
                </value>
                <value>
                    <fullName>Document (Rejected Document or Form)</fullName>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>Email Update</fullName>
                </value>
                <value>
                    <fullName>Multi Article Change</fullName>
                </value>
                <value>
                    <fullName>New Article</fullName>
                </value>
                <value>
                    <fullName>New Email</fullName>
                </value>
                <value>
                    <fullName>New Source Doc</fullName>
                </value>
                <value>
                    <fullName>New Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Project Release</fullName>
                </value>
                <value>
                    <fullName>Project Test</fullName>
                </value>
                <value>
                    <fullName>Source Doc Update</fullName>
                </value>
                <value>
                    <fullName>Training Materials</fullName>
                </value>
                <value>
                    <fullName>Training Update</fullName>
                </value>
                <value>
                    <fullName>Website or Questionnaire Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Start_Date__c</fullName>
        <label>Requested Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requesting_Department__c</fullName>
        <label>Requesting Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Process Improvement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Project_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Project_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Request</label>
    <listViews>
        <fullName>All_My_Project_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Request_Status__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Project_Request__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Mine</filterScope>
        <label>All - My Created Project Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ops</fullName>
        <columns>Requesting_Department__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Project_Request_Approver__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>Product__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Project_Request__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Request__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Ops</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ID_Team_View</fullName>
        <booleanFilter>(1 OR (2 AND 4)) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Implementer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Implementer__c</field>
            <operation>contains</operation>
            <value>Kay,Rachel Roppolo</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kay,Rachel</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Waters</value>
        </filters>
        <label>ID Team View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Project_Implementer__c</columns>
        <columns>Project_Request__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Completed</value>
        </filters>
        <label>*My Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Pending_Approvals</fullName>
        <columns>Request_Status__c</columns>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Article_Project_Request__c.Operations_Request</value>
        </filters>
        <label>*My Pending Approvals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Requests</fullName>
        <columns>Request_Status__c</columns>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Project_Request_Submitter__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>*My Submitted Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_Approved</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ImplementerID__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>2. Ops - Project Requests - Approved</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_Completed</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ImplementerID__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>5. Ops - Project Requests - Completed</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_Dewi_Smith</fullName>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <columns>Project_Request_Approver__c</columns>
        <columns>Project_Implementer__c</columns>
        <columns>NAME</columns>
        <columns>Article_Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>All</value>
        </filters>
        <filters>
            <field>Project_Request__c</field>
            <operation>equals</operation>
            <value>Article (Customer-Facing)</value>
        </filters>
        <filters>
            <field>Project_Request__c</field>
            <operation>equals</operation>
            <value>Article (Internal)</value>
        </filters>
        <filters>
            <field>Project_Request_Approver__c</field>
            <operation>equals</operation>
            <value>Dewi Smith</value>
        </filters>
        <label>Ops - Project Requests - Dewi Smith</label>
        <language>en_US</language>
        <sharedTo>
            <group>ProjectRequestTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_New</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ImplementerID__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>8. Ops - Project Requests - New</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_No_Implement</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Implementer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>New,Completed,Rejected</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>9. Ops - Project Requests - No Implement</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ops_Project_Requests_Pending_Appr</fullName>
        <columns>NAME</columns>
        <columns>Project_Request__c</columns>
        <columns>Document_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_Start_Date__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ImplementerID__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>1. Ops - Project Requests - Pending Apr</label>
        <language>en_US</language>
        <sharedTo>
            <role>KM_Team</role>
        </sharedTo>
    </listViews>
</CustomObject>